packages/kit/test/apps/basics/src/routes/errors/load-error-server/layout-data/+layout.server.js
/** @type {import('./$types').LayoutServerLoad} */
export function load() {
	return {
		answer: 42
	};
}
